--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
         <div class="footer-content">
             <div class="footer-logo">WanderWay</div>
             <p class="footer-tagline">The Future of Smart Tourism</p>
-            <p>Contact: <a href="mailto:hello@wanderway.app" style="color: var(--color-accent); text-decoration: none;">hello@wanderway.app</a></p>
+            <p>Contact: <a href="mailto:hello@wanderway.app" style="color: var(--color-accent); text-decoration: none;">gt201902571@wmsu.edu.ph</a></p>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -591,3 +591,4 @@
 
 </body>
 </html>
+
